nav flicker fix

--- a/src/components/Navigation/_navigation.scss
+++ b/src/components/Navigation/_navigation.scss
@@ -69,7 +69,7 @@
 }
 
 .headerNav-active {
-  top: 10rem;
+  top: 9.9rem;
 }
 
 .headerNav-active-zindex {
